# vocabtrainer

./: .editorconfig  .gitignore  Cargo.toml  biome.json  data.txt  package.json  pnpm-lock.yaml  testdb.db3
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
app/: globals.css
app/(api)/seed/: route.ts
app/(routes)/vocabulary/: layout.tsx  styles.module.css
app/data/: database.ts  repository.ts  sqlite-repository.ts
app/lib/: data.ts
app/lib/actions/: createVocabItemGroup.ts  index.ts  updateVocabularyItem.ts
app/lib/error/: index.ts
app/query/: index.ts
app/ui/FlexibleCard/: index.tsx  st.module.css
apps/next-app/: next.config.ts  package.json  pnpm-lock.yaml
apps/router-app/: .cta.json  index.html  package.json  vite.config.ts
backend/: Cargo.toml
backend/data/: lesson_1.json  lesson_3.json  lesson_3.txt  lesson_5.txt  lesson_6.json  lesson_6.txt
backend/scripts/: main.py
backend/src/: application.rs  cli.rs  command.rs  context.rs  database.rs  dictionary.rs  history.rs  logging.rs  main.rs
data/: lesson_1.txt  lesson_2.json  lesson_2.txt  lesson_3.json
frontend/: .gitignore  notes.md  package-lock.json  package.json  pnpm-lock.yaml  svgr.d.ts  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  styles.module.css
frontend/data/: lesson_1.json  lesson_2.json  lesson_3.json  lesson_3.txt  lesson_4.json  lesson_5.json  lesson_6.json  lesson_7.txt  lesson_8.txt
frontend/scripts/: main.py
frontend/src/: App.tsx
src/: cli.rs  logging.rs  main.rs
(+167 files in other folders)
