[package]
name = "vocabtrainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = "4.5.1"
log4rs = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
